trunk/test/fail/InheritanceTests.tart
/// TEST MissingMethod: lacks implementation
public final class Test : Iterable[String] {
}

/// TEST BadOverrideType: lacks implementation
public final class Test : Iterable[String] {
  def iterate -> void {}
}

/// TEST BadOverrideType: lacks implementation
public final class Test : Iterable[String] {
  def iterate (i:int32) -> void {}
}

/// TEST CannotInheritFromFinalType: is final
public final class Test : String {
  def construct() {}
}

/// TEST BadBaseForStruct: struct can only derive from a struct
public final struct Test : Object {}

/// TEST BadBaseForInterface: interface can only inherit
public interface Test : Object {}

/// TEST NonSingularBase: is a template
public final class Test : Array {}

/// TEST PrimitiveBase: Cannot inherit from int32
public final class Test : int32 {}

/// TEST CircularInheritance: Circular
public class Test : Test {}

/// TEST MultipleInheritance: single concrete
public class Test : Exception, Exception {}

/// TEST FinalInterface: Interface type cannot be final
public final interface Test {}

/// TEST FinalProtocol;: Protocol type cannot be final
public final protocol Test {}

/// TEST FinalInterfaceMethod: cannot be final
public interface Test {
  final def iterate -> void {}
}

/// TEST PrivateInterfaceMethod: cannot be non-public
public interface Test {
  private def iterate -> void;
}
